# amplify-auth

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
amplify_auth/: __init__.py  client.py
amplify_auth/service/: config.py  main.py
tests/: conftest.py  test_api.py  test_client.py  test_models.py
