[project]
name = "amplify-auth"
version = "1.0.0"
description = "Bearer token authentication client and server for AMPLIfy services"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
server = [
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "uvicorn>=0.32.0",
    "pydantic-settings>=2.5.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
]

[project.scripts]
amplify-auth-server = "amplify_auth.service.main:main"
amplify-auth-cli = "amplify_auth.service.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplify_auth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
